discussion/kv_engine/161177/161177_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42122: Move local doc parsing code to kv_engine

In a future change I will remove the couchstore specifics from the
local doc parsing code (this commit is just a move) so that the local
doc parsing code can then be reused in magma_dump

Change-Id: I5645130722062e9d7b4ab2197d2c137a9e82e4fc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-09-13 11:21:45.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-13 11:50:08.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33880/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/couchstore/include/libcouchstore/file_ops.h:18:10:
fatal error: "folly/portability/SysTypes.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33880/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39772/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\kvstore\storage_common\storage_common\local_doc_parser.cc(16): fatal error C1083: Cannot open include file: "collections/kvstore_generated.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39772/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12304/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/couchstore/include/libcouchstore/file_ops.h:18:10: error: "folly/portability/SysTypes.h" file not found [clang-diagnostic-error]
#include <folly/portability/SysTypes.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12304/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/couchstore/include/libcouchstore/file_ops.h:18:10:
error: "folly/portability/SysTypes.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12304/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13061/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1945/ : FAILURE

Compile error at [2021-09-13T11:23:10.917Z] ../couchstore/include/libcouchstore/file_ops.h:18:10:
fatal error: "folly/portability/SysTypes.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1945/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14160/ : FAILURE

Compile error at [2021-09-13T11:24:12.231Z] ../kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_parser.cc:16:10:
fatal error: collections/kvstore_generated.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14160/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13921/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13921/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14649/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14649/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22151/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22151/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1963/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1963/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11094/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
